finalizando teste e adicionando no github actions